[project]
name = "Seokxkyu_cmd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
seokxkyu_cmd = 'seokxkyu_cmd.cmd:call'


[tool.pdm]
distribution = true
